--- a/app/src/main/res/layout/layout_view_chip_text.xml
+++ b/app/src/main/res/layout/layout_view_chip_text.xml
@@ -1,21 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linear_chip_tag"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:animateLayoutChanges="true"
-    android:background="@drawable/textview_chips"
-    android:gravity="center"
-    android:orientation="horizontal"
-    android:padding="4dp">
+    tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/txt_chip_content"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:textColor="#FFFFFF"
-        android:textSize="15sp" />
-    
-</LinearLayout>
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chipGroup"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteX="395dp" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
