--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<color name="colorPrimary">#6200EE</color>
-<color name="colorPrimaryDark">#3700B3</color>
-<color name="colorAccent">#AA8CD5</color>
+<color name="colorPrimary">#6A676E</color>
+<color name="colorPrimaryDark">#242325</color>
+<color name="colorAccent">#413A4A</color>
 </resources>
